added a footer section

--- a/index.html
+++ b/index.html
@@ -428,6 +428,18 @@
 
         <!-- /.Customers carousel -->
 
+        <!-- Footer -->
+        <footer class="page-footer font-small blue">
+
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">© 2019 Copyright <a href="index.html"> BADA BETTY</a> • Web Developer.
+            
+            </div>
+            <!-- Copyright -->
+        
+        </footer>
+  <!-- Footer -->
+
     </main>
     <!--/Main layout-->
 
