--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="col-md-12 pt-3">
                             <div class="white-text text-center pt-5">
                                 <h1 class="display-2 mb-4 dark-grey-text wow fadeIn">My name is<strong> Betty Bada</strong></h1>
-                                <h3 class="text-uppercase font-weight-bold dark-grey-text wow fadeIn" data-wow-delay="0.4s"><strong id="mask-color">Front-end Web developer</strong></h3>
+                                <h3 class="text-uppercase font-weight-bold dark-grey-text wow fadeIn" data-wow-delay="0.4s"><strong id="mask-color">Product Manager</strong></h3>
                                 <a href="#about" class="btn btn-floating btn-large blue lighten-3 wow fadeIn" data-wow-delay="0.4s" data-offset="100"><i class="fas fa-angle-down" aria-hidden="true"></i></a>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                         <!--Panel-->
                         <div class="card card-body hoverable">
                             <i class="fas fa-laptop fa-3x mb-4" aria-hidden="true"></i>
-                            <h5 class="font-weight-bold text-uppercase mb-4">Freelancer</h5>
+                            <h5 class="font-weight-bold text-uppercase mb-4">Writer</h5>
                             <p class="dark-grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <!--/.Panel-->
@@ -142,7 +142,7 @@
                         <!--Panel-->
                         <div class="card card-body blue lighten-3 hoverable">
                             <i class="fas fa-code fa-3x mb-4" aria-hidden="true"></i>
-                            <h5 class="font-weight-bold text-uppercase mb-4">Developer</h5>
+                            <h5 class="font-weight-bold text-uppercase mb-4">Product Manager</h5>
                             <p class="dark-grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <!--/.Panel-->
@@ -156,7 +156,7 @@
                         <!--Panel-->
                         <div class="card card-body hoverable">
                             <i class="fas fa-pencil-alt fa-3x mb-4" aria-hidden="true"></i>
-                            <h5 class="font-weight-bold text-uppercase mb-4">Designer</h5>
+                            <h5 class="font-weight-bold text-uppercase mb-4">Freelancer</h5>
                             <p class="dark-grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
                         <!--/.Panel-->
@@ -194,22 +194,22 @@
                                 <!--Description-->
                                 <blockquote class="blockquote bq-info mb-4">
                                     <div class="row"> <i class="fas fa-briefcase fa-x mb-1 mr-3 ml-3" aria-hidden="true"></i>
-                                        <h5 class="font-weight-bold mb-3">Senior developer</h5>
+                                        <h5 class="font-weight-bold mb-3">Product Manager</h5>
                                     </div>
-                                    <p class="font-weight-bold ml-1 dark-grey-text mb-2">July, 2013 - Present (4 years)</p>
+                                    <p class="font-weight-bold ml-1 dark-grey-text mb-2">July, 2020 - Present </p>
                                     <p class="mb-0 ml-1 light-grey-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                                 </blockquote>
 
                                 <blockquote class="blockquote bq-info mt-1 mb-4">
                                     <div class="row"> <i class="fas fa-briefcase fa-x mb-1 mr-3 ml-3" aria-hidden="true"></i>
-                                        <h5 class="font-weight-bold mb-3">JavaScript developer</h5> </div>
+                                        <h5 class="font-weight-bold mb-3">Product Marketing Associate</h5> </div>
                                     <p class="font-weight-bold ml-1 dark-grey-text mb-2">March 2011 - June 2012 (1 year, 3 Month)</p>
                                     <p class="mb-0 ml-1 light-grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum quas, eos officia maiores ipsam ipsum dolores. </p>
                                 </blockquote>
 
                                 <blockquote class="blockquote bq-info">
                                     <div class="row"> <i class="fas fa-briefcase fa-x mb-1 mr-3 ml-3" aria-hidden="true"></i>
-                                        <h5 class="font-weight-bold mb-3">Web developer</h5> </div>
+                                        <h5 class="font-weight-bold mb-3">Product Marketing </h5> </div>
                                     <p class="font-weight-bold ml-1 dark-grey-text mb-2"><strong>March 2005 - May 2011 (6 years, 2 Month)</strong></p>
                                     <p class="mb-0 ml-1 light-grey-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit integer posuere.</p>
                                 </blockquote>
