--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                     <div class="row"> <i class="fas fa-briefcase fa-x mb-1 mr-3 ml-3" aria-hidden="true"></i>
                                         <h5 class="font-weight-bold mb-3">Product Marketing </h5> </div>
                                     <p class="font-weight-bold ml-1 dark-grey-text mb-2"><strong>March 2005 - May 2011 (6 years, 2 Month)</strong></p>
-                                    <p class="mb-0 ml-1 light-grey-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit integer posuere.</p>
+                                    <p class="mb-0 ml-1 light-grey-text">HALLO.</p>
                                 </blockquote>
 
                         </div>
